--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,8 @@
                 <version>3.0.0-M5</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <file>Smoke.xml</file>
+                        <file>DataDrivenTest.xml</file>
+                        <file>TestScripts.xml</file>
                     </suiteXmlFiles>
                     <parallel>methods</parallel>
                     <useUnlimitedThreads>true</useUnlimitedThreads>
